--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,8 @@ params:
   socialIcons:
     - name: github
       url: "https://github.com/pradyumngoel"
+    - name: discord
+      url: "https://discordapp.com/users/@Shadow442#7298"
 
   ShowBreadCrumbs: true
   ShowReadingTime: true
